--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,8 @@
 {
   "extends": [
-    "config:base"
-  ],
-  "automerge": true,
-  "major": {
-    "automerge": false
-  }
+    "config:base",
+    "schedule:weekly",
+    ":automergeAll",
+    "group:allNonMajor"
+  ]
 }
