--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "sourceMap": true,
     "target": "es5",
+    "resolveJsonModule": true,
     "lib": [
       "es2015"
     ]
   },
-  "include": [
-    "*.ts",
-    "src/**/*.ts",
-    "test/**/*.ts"
+  "exclude": [
+    "**/*.spec.*"
   ]
 }
