--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "npm run build:prod",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "npm run lint -- --fix",
-    "build": "webpack --config webpack.config.ts --require ts-node/register",
-    "build:dev": "npm run build -- --mode development --watch",
-    "build:prod": "npm run lint && npm run build -- --mode production",
+    "build": "parcel $PARCEL_CMD src/index.ts --target node --bundle-node-modules",
+    "build:dev": "PARCEL_CMD=watch npm run build",
+    "build:prod": "npm run lint && PARCEL_CMD=build npm run build",
     "deploy:prod": "ask deploy --force --profile default --target lambda",
     "create-s3-bucket": "aws s3 ls s3://alexa-audioadventskalender-skill > /dev/null 2>&1 || aws s3 mb s3://alexa-audioadventskalender-skill --region eu-west-1",
     "deploy:assets": "aws s3 sync ./assets s3://alexa-audioadventskalender-skill/ --acl public-read"
@@ -22,15 +22,9 @@
     "ask-cli": "1.7.2",
     "ask-sdk-core": "2.5.2",
     "ask-sdk-model": "1.15.1",
-    "class.extend": "0.9.2",
     "luxon": "1.15.0",
-    "raw-loader": "2.0.0",
-    "ts-loader": "6.0.1",
-    "ts-node": "8.2.0",
+    "parcel-bundler": "1.12.3",
     "tslint": "5.16.0",
-    "typescript": "3.4.5",
-    "underscore": "1.9.1",
-    "webpack": "4.32.2",
-    "webpack-command": "0.4.2"
+    "typescript": "3.4.5"
   }
 }
